--- a/views/email/passwordReset.pug
+++ b/views/email/passwordReset.pug
@@ -2,7 +2,7 @@ extends baseEmail
 
 block content
     p Hi #{firstName},
-    p Forgot you password? submit a patch request with your new password and passwordConfirm under here:
+    p Forgot your password? Please submit a patch request with your new password and passwordConfirm under here:
     table.btn.btn-primary(role='presentation', border='0', cellpadding='0', cellspacing='0')
         tbody
             tr
@@ -12,4 +12,4 @@ block content
                             tr
                                 td
                                     a(href=`${url}`,  target='_blank') Reset your password here
-    p If you need any help with booking your next tour, please don't hesitate to contact me!
+    p If you need any help with Create Your Wedding , please don't hesitate to contact me!
