--- a/views/detailtemplate.pug
+++ b/views/detailtemplate.pug
@@ -21,7 +21,7 @@ block content
               .col-12.col-md-6.order-md-1
                 a.card-body(href='/wedding/preview/62793abbf277951fc0119a7b' target='_blank')
                   h3
-                    | Bao Anh
+                    | Lưu Phương &amp; Triệu Thúy 
                   p.mb-0.text-muted
                     | Ch&#x1EE7; &dstrok;&#x1EC1; h&#x1B0;&#x1EDB;ng &dstrok;&#x1EBF;n s&#x1EF1; tr&#x1EBB; trung, t&#x1B0;&#x1A1;i m&#x1EDB;i v&agrave; tr&agrave;n &dstrok;&#x1EA7;y n&abreve;ng l&#x1B0;&#x1EE3;ng c&#x1EE7;a tu&#x1ED5;i tr&#x1EBB;. Mang &dstrok;&#x1EBF;n c&#x1EA3;m ph&oacute;ng kho&aacute;ng, t&#x1EF1; do kh&ocirc;ng theo m&#x1ED9;t khu&ocirc;n kh&#x1ED5; nh&#x1EA5;t &dstrok;&#x1ECB;nh n&agrave;o.
                 .card-meta(href='/wedding/preview/62793abbf277951fc0119a7b' target='_blank')
