--- a/views/detailtemplate2.pug
+++ b/views/detailtemplate2.pug
@@ -21,7 +21,7 @@ block content
               .col-12.col-md-6.order-md-1
                 a.card-body(href='/wedding/preview/62793abbf277951fc0119a7b' target='_blank')
                   h3
-                    | Minimalism                            
+                    | Minh Đức &amp; Thanh Quyên                             
                   p.mb-0.text-muted
                     | Yêu những điều giản dị và thuần khiết. Bắt trọn hạnh phúc trong từng khoảnh khắc. Chủ nghĩa tối giản lấy màu trắng là màu chủ đạo và sắc xanh tạo điểm nhấn.                            
                 .card-meta(href='/wedding/preview/62793abbf277951fc0119a7b' target='_blank')
