--- a/views/resetPassword.pug
+++ b/views/resetPassword.pug
@@ -1,6 +1,4 @@
 extend base
-block head
-  link(rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css' integrity='sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ' crossorigin='anonymous')
 block content
   .main
     .container.mt-10.mb-14(style='height:306px')
@@ -11,5 +9,5 @@ block content
           input#token(type='hidden' value=`${users}`)
         .form-group
           label(for='passwordConfirm') Nhập Lại Mật Khẩu
-          input#passwordConfirm.form-control(type='passwordConfirm' placeholder='Nhập Lại Mật Khẩu')
-        button#ChangeButton.btn.btn-primary(type='button') Change Password
+          input#passwordConfirm.form-control(type='password' placeholder='Nhập Lại Mật Khẩu')
+        button#ChangeButton.btn.btn-primary(type='submit') Change Password
