--- a/views/signin.pug
+++ b/views/signin.pug
@@ -29,6 +29,8 @@ block content
                             span.text
                                 | Not a member?
                                 br
-                                a.text.signup-link(href='signup') Signup now
+                                a.text.signup-link(href='signup' style='justify-content: space-between;display: flex') Signup now
+                                span.text.text-right
+                                a.text.forgotpassword(href='/user/forgotPassword') Quên Mật Khẩu?
                         mt-4.text-left
                                 a(href='/wedding.html') Trở về trang chủ
