--- a/views/templates.pug
+++ b/views/templates.pug
@@ -12,23 +12,6 @@ block content
         .shape.shape-bottom.shape-fluid-x.text-light
             svg(viewbox='0 0 2880 48' fill='none' xmlns='http://www.w3.org/2000/svg')
             path(d='M0 48h2880V0h-720C1442.5 52 720 0 720 0H0v48z' fill='currentColor')
-    section.mt-n6
-        .container
-            .row
-                .col-12
-                    form.rounded.shadow.mb-4(action='https://#/vi/wedding/templates')
-                    .input-group.input-group-lg
-                        span.input-group-text.border-0.pe-1
-                        i.fe.fe-search
-                        input#keyword.form-control.px-1.border-0(type='text' name='keyword' value='' aria-label='Nhập từ khóa tìm kiếm ...' placeholder='Nhập từ khóa tìm kiếm ...')
-                        span.input-group-text.border-0.py-0.ps-1.pe-3
-                        button.btn.btn-sm.btn-dark(type='submit') T&igrave;m ki&#x1EBF;m
-                    .row.align-items-center
-                    .col-auto
-                        h6.fw-bold.text-uppercase.text-muted.mb-0
-                            | C&oacute; 
-                            strong 6
-                            |  templates &dstrok;&#x1B0;&#x1EE3;c t&igrave;m th&#x1EA5;y
     section.pt-7.pt-md-10.pb-7
         .container
             #sectionTemplates.row
@@ -40,29 +23,29 @@ block content
                                 .shape.shape-bottom.shape-fluid-x.text-white
                                     svg(viewbox='0 0 2880 480' fill='none' xmlns='http://www.w3.org/2000/svg')
                                         path(fill-rule='evenodd' clip-rule='evenodd' d='M2160 0C1440 240 720 240 720 240H0v240h2880V0h-720z' fill='currentColor')
-                        a.card-body(href='start3bf4.html?template=6174ee7a7a1c7661fb0a671c')
-                            h3 B&#x1EA3;o Anh
+                        a.card-body(href='start3bf4.html?template=62aadf5bd179c5190c7e936c')
+                            h3 Lưu Phương &amp; Triệu Thúy 
                             p.mb-0.text-muted
                                 | Ch&#x1EE7; &dstrok;&#x1EC1; h&#x1B0;&#x1EDB;ng &dstrok;&#x1EBF;n s&#x1EF1; tr&#x1EBB; trung, t&#x1B0;&#x1A1;i m&#x1EDB;i v&agrave; tr&agrave;n &dstrok;&#x1EA7;y n&abreve;ng l&#x1B0;&#x1EE3;ng c&#x1EE7;a tu&#x1ED5;i tr&#x1EBB;. Mang &dstrok;&#x1EBF;n c&#x1EA3;m ph&oacute;ng kho&aacute;ng, t&#x1EF1; do kh&ocirc;ng theo m&#x1ED9;t khu&ocirc;n kh&#x1ED5; nh&#x1EA5;t &dstrok;&#x1ECB;nh n&agrave;o.
                         .card-meta.mt-auto
                             hr.card-meta-divider
                             .d-block.w-100.text-center
-                                a.btn.btn-sm.btn-secondary-soft(href='https://preview.iwedding.info/?template=6174ee7a7a1c7661fb0a671c' target='_blank') Xem tr&#x1B0;&#x1EDB;c
+                                a.btn.btn-sm.btn-secondary-soft(href='/wedding/preview/62aadf5bd179c5190c7e936c' target='_blank') Xem tr&#x1B0;&#x1EDB;c
                                 a.btn.btn-sm.btn-danger-soft(href='/wedding/templates/createWedding1'  target='_blank') T&#x1EA1;o website
-                .col-12.col-md-6.col-lg-6.d-flex.mb-7.template-item(data-id='6174ee5134c46827c45a50e5')
+                .col-12.col-md-6.col-lg-6.d-flex.mb-7.template-item(data-id='62793abbf277951fc0119a7b')
                     .card.mb-6.mb-lg-0.shadow-light-lg.lift.lift-lg
-                        a.card-img-top(href='startd90f.html?template=6174ee5134c46827c45a50e5')
+                        a.card-img-top(href='/wedding/preview/62793abbf277951fc0119a7b')
                             img.card-img-top(src='/img/templates/picture2.jpg' alt='Minimalism')
                             .position-relative
                                 .shape.shape-bottom.shape-fluid-x.text-white
                                     svg(viewbox='0 0 2880 480' fill='none' xmlns='http://www.w3.org/2000/svg')
                                         path(fill-rule='evenodd' clip-rule='evenodd' d='M2160 0C1440 240 720 240 720 240H0v240h2880V0h-720z' fill='currentColor')
-                        a.card-body(href='startd90f.html?template=6174ee5134c46827c45a50e5')
-                            h3 A nh&acirc;n
+                        a.card-body(href='/wedding/preview/62793abbf277951fc0119a7b')
+                            h3 Minh Đức &amp; Thanh Quyên
                             p.mb-0.text-muted
                                 | Y&ecirc;u nh&#x1EEF;ng &dstrok;i&#x1EC1;u gi&#x1EA3;n d&#x1ECB; v&agrave; thu&#x1EA7;n khi&#x1EBF;t. B&#x1EAF;t tr&#x1ECD;n h&#x1EA1;nh ph&uacute;c trong t&#x1EEB;ng kho&#x1EA3;nh kh&#x1EAF;c. Ch&#x1EE7; ngh&itilde;a t&#x1ED1;i gi&#x1EA3;n l&#x1EA5;y m&agrave;u tr&#x1EAF;ng l&agrave; m&agrave;u ch&#x1EE7; &dstrok;&#x1EA1;o v&agrave; s&#x1EAF;c xanh t&#x1EA1;o &dstrok;i&#x1EC3;m nh&#x1EA5;n.
                         .card-meta.mt-auto
                             hr.card-meta-divider
                             .d-block.w-100.text-center
-                                a.btn.btn-sm.btn-secondary-soft(href='https://preview.iwedding.info/?template=6174ee5134c46827c45a50e5' target='_blank') Xem tr&#x1B0;&#x1EDB;c
+                                a.btn.btn-sm.btn-secondary-soft(href='/wedding/preview/62793abbf277951fc0119a7b' target='_blank') Xem tr&#x1B0;&#x1EDB;c
                                 a.btn.btn-sm.btn-danger-soft(href='/wedding/templates/createWedding2'  target='_blank') T&#x1EA1;o website
