--- a/views/user-password.pug
+++ b/views/user-password.pug
@@ -37,7 +37,7 @@ block content
                                     h4.mb-0
                                         | Thi&#x1EBF;t l&#x1EAD;p b&#x1EA3;o m&#x1EAD;t
                                 .col-auto
-                                    a.small.text-gray-700(target='_blank' href='/vi/user/forgot-password')
+                                    a.small.text-gray-700(target='_blank' href='/user/forgotPassword')
                                         | B&#x1EA1;n qu&ecirc;n m&#x1EAD;t kh&#x1EA9;u?
                     .card-body
                         form.mb-6.form-user-password
