--- a/views/bridesmaids-groomsmen.pug
+++ b/views/bridesmaids-groomsmen.pug
@@ -38,6 +38,10 @@ block content
                                 a.nav-link.bg-gray-200(href=`/wedding/edit/${bridesmaid.wedding}/event`) S&#x1EF1; ki&#x1EC7;n
                             li.nav-item
                                 a.nav-link.bg-gray-200(href=`/wedding/edit/${bridesmaid.wedding}/storylove`) Chuy&#x1EC7;n T&igrave;nh Y&ecirc;u
+                            li.nav-item
+                                a.nav-link.bg-gray-200(href=`/wedding/edit/${bridesmaid.id}/contact`) Lời Chúc
+                            li.nav-item
+                                a.nav-link.bg-gray-200(href=`/wedding/edit/${bridesmaid.id}/templatesEdit`) Giao Diện
                 .row.mt-6   
                     if(bridesmaids)
                         form#groomsmans-bridesmaids-form.form-bridesmaid-user
