--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -73,9 +73,9 @@ block content
                       path(fill-rule='evenodd' d='M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z')
                   h5.text-uppercase.text-white.me-2.mb-0.text-center
                     | Minh Đức &amp; Thanh Quyên
-          .text-center.text-md-start
-            a.btn.btn-danger.shadow.lift.me-1.mb-3(href='/wedding/templates' target='_blank' style='display:flex;justify-content: center;')
-              | Xem Thêm Các Mẫu Của Những Bạn Đã Tạo
+          //- .text-center.text-md-start
+          //-   a.btn.btn-danger.shadow.lift.me-1.mb-3(href='/wedding/sites' target='_blank' style='display:flex;justify-content: center;')
+          //-     | Xem Thêm Các Mẫu Của Những Bạn Đã Tạo
       section#sectionFeatures.py-8.py-md-11.border-bottom
         .container
           .row.justify-content-center
