--- a/views/managementPage.pug
+++ b/views/managementPage.pug
@@ -28,7 +28,7 @@ block  content
                     .col-12.col-md-6.col-lg-4.d-flex.mb-7
                         .card.mb-6.mb-lg-0.shadow-light-lg.lift.lift-lg
                             .card-img-top(href='#!')
-                                img.card-img-top(src='/img/wedding/website-nothumb.jpeg' alt=' Wedding site!')
+                                img.card-img-top(src=`/img/templates/${wedding.templates.titlePhoto}` alt=' Wedding site!')
                                 .position-relative
                                 .shape.shape-bottom.shape-fluid-x.text-white
                                     svg(viewbox='0 0 2880 480' fill='none' xmlns='http://www.w3.org/2000/svg')
