--- a/views/storylove.pug
+++ b/views/storylove.pug
@@ -36,7 +36,11 @@ block content
                             li.nav-item
                                 a.nav-link.bg-gray-200(href=`/wedding/edit/${story.wedding}/event`) S&#x1EF1; ki&#x1EC7;n
                             li.nav-item
-                                a.nav-link.active(href=`/wedding/edit/${story.wedding}/storylove`) Chuy&#x1EC7;n T&igrave;nh Y&ecirc;u  
+                                a.nav-link.active(href=`/wedding/edit/${story.wedding}/storylove`) Chuy&#x1EC7;n T&igrave;nh Y&ecirc;u
+                            li.nav-item
+                                a.nav-link.bg-gray-200(href=`/wedding/edit/${story.wedding}/contact`) Lời Chúc
+                            li.nav-item
+                                a.nav-link.bg-gray-200(href=`/wedding/edit/${story.wedding}/templatesEdit`) Giao Diện 
             input(type='hidden' name='_csrf-biihappy' value='LpfGO0r-Dc-bpvWJ1J993GvVrllhRJn3BLXu-H93gUd2rqcDLpd_tvbRl-a61A6lCZ3kLiQC1oJg27abCxazNA==')
             .storiesContainer.row.mt-6
                 each story,i in storys  
