--- a/views/base.pug
+++ b/views/base.pug
@@ -60,7 +60,7 @@ body.flex-colum.h-100(style='padding-top:65px!important')
     script(src='/assets/705bcf32/yii.validation.js')
     script(src='/assets/705bcf32/yii.captcha.js')
     script(src='/js/scripts.js')
-    script(src='/js/bundle.js')
+    script(type="module" dist='/js/bundle.js')
     script(type="module" dist='/js/index.js')
 
 
